@@ -1,2 +1,3 @@
 sir.e01
+sir.e02
 smallpox
