@@ -39,18 +39,18 @@ It is completely parallel to argument \code{series}, having the same
 library(graphics, pos = "package:base", verbose = FALSE)
 library(   utils, pos = "package:base", verbose = FALSE)
 }
-data(sir.e01, package = "fastbeta")
-a <- attributes(sir.e01)
-str(sir.e01)
-plot(sir.e01)
+data(sir.e02, package = "fastbeta")
+a <- attributes(sir.e02)
+str(sir.e02)
+plot(sir.e02)
 
 ## We suppose that we have perfect knowledge of incidence,
 ## births, and the data-generating parameters
-series <- cbind(sir.e01[, c("Z", "B")], mu = a[["mu"]](0))
+series <- cbind(sir.e02[, c("Z", "B")], mu = a[["mu"]](0))
 colnames(series) <- c("Z", "B", "mu") # FIXME: stats:::cbind.ts mangles dimnames
-constants <- c(S0 = sir.e01[[1L, "S"]],
-               I0 = sir.e01[[1L, "I"]],
-               R0 = sir.e01[[1L, "R"]],
+constants <- c(S0 = sir.e02[[1L, "S"]],
+               I0 = sir.e02[[1L, "I"]],
+               R0 = sir.e02[[1L, "R"]],
                gamma = a[["gamma"]],
                delta = a[["delta"]])
 
