@@ -27,6 +27,10 @@
     at install time by a \command{make} rule in \file{src/Makevars}.
     There is no need: the scripts are preserved due to the setting of
     \code{BuildResaveData: no}.  Hence \file{src/Makevars} is removed.
+
+    \item Simulation \code{sir.e01} is generated by the same parameters
+    but is no longer stochastic.  Simulation \code{sir.e02} gives the
+    stochastic variant.
   }
 }
 
